syntax = "proto3";

package protos;

option go_package = "orch-go/gen/protos;protos";

import "google/protobuf/empty.proto";
import "custom_types.proto";

service PaymentTemplateService {
  rpc GetAll (GetAllRequest) returns (GetAllPaymentTemplatesResponse);
  rpc GetById (GetPaymentTemplateByIdRequest) returns (PaymentTemplateModel);
  rpc GetByIds (GetPaymentTemplateByIdsRequest) returns (GetAllPaymentTemplatesResponse);
  rpc Add (AddPaymentTemplateRequest) returns (PaymentTemplateModel);
  rpc Update (UpdatePaymentTemplateRequest) returns (google.protobuf.Empty);
  rpc Delete (DeletePaymentTemplateRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddPaymentTemplateBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdatePaymentTemplateBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeletePaymentTemplateBulkRequest) returns (google.protobuf.Empty);
}

message PaymentTemplateModel {
  int32 template_id = 1;
  optional int32 customer_id = 2;
  optional string name = 3;
  optional string target_iban = 4;
  optional string default_amount = 5;
}

message GetAllPaymentTemplatesResponse {
  repeated PaymentTemplateModel payment_templates = 1;
}

message GetPaymentTemplateByIdRequest {
  int32 template_id = 1;
}

message GetPaymentTemplateByIdsRequest {
  repeated int32 template_ids = 1;
}

message AddPaymentTemplateRequest {
  optional int32 customer_id = 1;
  optional string name = 2;
  optional string target_iban = 3;
  optional string default_amount = 4;
}

message UpdatePaymentTemplateRequest {
  int32 template_id = 1;
  optional int32 customer_id = 2;
  optional string name = 3;
  optional string target_iban = 4;
  optional string default_amount = 5;
}

message DeletePaymentTemplateRequest {
  int32 template_id = 1;
}

message AddPaymentTemplateBulkRequest {
  repeated AddPaymentTemplateRequest templates = 1;
}

message UpdatePaymentTemplateBulkRequest {
  repeated UpdatePaymentTemplateRequest templates = 1;
}

message DeletePaymentTemplateBulkRequest {
  repeated DeletePaymentTemplateRequest templates = 1;
}
