syntax = "proto3";

package protos;

option go_package = "orch-go/gen/protos;protos";

import "google/protobuf/empty.proto";

service FeeTypeService {
  rpc GetAll (google.protobuf.Empty) returns (GetAllFeeTypesResponse);
  rpc GetById (GetFeeTypeByIdRequest) returns (FeeTypeModel);
  rpc Add (AddFeeTypeRequest) returns (FeeTypeModel);
  rpc Update (UpdateFeeTypeRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteFeeTypeRequest) returns (google.protobuf.Empty);
}

message FeeTypeModel {
  int32 fee_id = 1;
  optional string name = 2;
  optional string description = 3;
}

message GetAllFeeTypesResponse {
  repeated FeeTypeModel fee_types = 1;
}

message GetFeeTypeByIdRequest {
  int32 fee_id = 1;
}

message AddFeeTypeRequest {
  optional string name = 1;
  optional string description = 2;
}

message UpdateFeeTypeRequest {
  int32 fee_id = 1;
  optional string name = 2;
  optional string description = 3;
}

message DeleteFeeTypeRequest {
  int32 fee_id = 1;
}
